# chatServer

./: .gitignore  README.md  chatServer.cabal  run.sh  stack.yaml  start.sh  test.rtf
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/flag-cache/: async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  chatServer-0.1.0.0-2NYsiBiH2bK2rzNM1BLuBm  chatServer-0.1.0.0-4eBfc9FZjs9FLhAS9M409k  chatServer-0.1.0.0-CKiPEewL8xJAxGM0oTBXAz  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSchatServer-0.1.0.0-2NYsiBiH2bK2rzNM1BLuBm-ghc8.0.2.dylib  libHSchatServer-0.1.0.0-4eBfc9FZjs9FLhAS9M409k-ghc8.0.2.dylib  libHSchatServer-0.1.0.0-CKiPEewL8xJAxGM0oTBXAz-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/lib/x86_64-osx-ghc-8.0.2/chatServer-0.1.0.0-2NYsiBiH2bK2rzNM1BLuBm/: DataTypes.dyn_hi  DataTypes.hi
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/lib/x86_64-osx-ghc-8.0.2/chatServer-0.1.0.0-4eBfc9FZjs9FLhAS9M409k/: Lib.dyn_hi
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/lib/x86_64-osx-ghc-8.0.2/chatServer-0.1.0.0-CKiPEewL8xJAxGM0oTBXAz/: DataTypes.dyn_hi  DataTypes.hi
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/pkgdb/: chatServer-0.1.0.0-4eBfc9FZjs9FLhAS9M409k.conf  chatServer-0.1.0.0-CKiPEewL8xJAxGM0oTBXAz.conf  package.cache
app/: Main.hs
src/: DataTypes.hs
