name:                chatServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chatServer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataTypes
  build-depends:       base >= 4.7 && < 5
                     , network, containers, stm, hashable
  default-language:    Haskell2010

executable chatServer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network, containers, stm, chatServer, hashable, async 
  default-language:    Haskell2010
